# ams-python-connector

./: .env.example  .gitignore  AGENTS.python_connector.md  README.md  pyproject.toml
agent-docs/: open-work.md
examples/: smoke_test_connection.py
legacy_code/: connect_ams.R  smoke_test_groups.R  smoke_test_login.R
src/ams_smartabase/: __init__.py  client.py  config.py  endpoints.py  filters.py  flatten.py  manifests.py  payloads.py  smoke_test.py
tests/: test_client.py  test_config.py  test_endpoints_and_manifests.py  test_filters.py  test_flatten.py  test_payloads.py  test_smoke_test.py
